--- a/netlify.toml
+++ b/netlify.toml
@@ -4,4 +4,4 @@
   publish = "netlify"
 
   ## more info on configuring this file: https://www.netlify.com/docs/netlify-toml-reference/
-Xin chào
+<p>Xin chào</p>
